# cinder

./: .editorconfig  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Makefile  README.md  RELEASE_NOTES.md  chat.py  check_latest_spans.py  check_recent_spans.py  cinder  cinder.yaml  cli.py  complete_verification.py  explore_phoenix_api.py  final_verification.py  principles.md  pyproject.toml  query_all_traces.py  query_latest_cinder_trace.py  query_latest_trace.py  query_phoenix_curl.sh  query_phoenix_data.py  query_phoenix_rest.py  query_phoenix_rest_curl.sh  query_phoenix_sdk.py  query_phoenix_ui.py  query_specific_trace.py  query_trace_by_id.py  requirements.txt  test_codex_direct.py  test_codex_streaming.py  test_file_structure.py  test_hierarchical_tracing.py  test_openinference_attributes.py  test_otel_grpc.py  test_otel_json.py  test_pge_with_logging.py  test_phoenix_sdk.py  test_trace.py  (+5 more)
cinder_cli/: __init__.py  __main__.py  chat_handler.py  cli.py  cli_color_aware_progress.py  cli_progress_display.py  cli_responsive_progress.py  compat.py  config.py  database.py  decision_logger.py  decision_reviewer.py  dimension_explainer.py  extended_proxy_decision.py  proxy_decision.py  question_guide.py  soul_adjuster.py  soul_presenter.py
docs/: ARCHITECTURE_MIGRATION_GUIDE.md  CODEX_INTEGRATION.md  DEPLOYMENT.md  DEVELOPMENT.md  ENVIRONMENT_MANAGEMENT.md  EXAMPLES.md  EXECUTOR_GUIDE.md  MAKEFILE_USAGE.md  MIGRATION_GUIDE.md  OBSERVABILITY.md  OPERATIONS_MANUAL.md  PHOENIX_DATA_VERIFICATION.md  PHOENIX_VERSION.md  PROGRESS_TRACKING_DEVELOPER.md  PROGRESS_TRACKING_GUIDE.md  PROJECT_STRUCTURE.md  SECURITY.md  SERVICE_MANAGEMENT.md  TRACE_SCHEMA_DESIGN.md  TRACE_SCHEMA_IMPLEMENTATION.md  TRACE_VERIFICATION_REPORT.md  TROUBLESHOOTING.md  VERIFICATION.md  WEB_GUIDE.md  architecture.md  coverage_analysis.md  migration-guide.md  security_audit.md
examples/: README.md  config.yaml  executor_config.yaml  simple_task.py  tech_choice.py
openspec/: README.md  config.yaml
project/: __init__.py  app.py  config.yaml
scripts/: README.md  local_test.sh  run_coverage_analysis.py  services.py  services.sh  start-web.sh  tasks.py  validate_implementation.py
tests/: __init__.py  test_cli_progress.py  test_code_generator.py  test_codex_executor.py  test_codex_integration_manager.py  test_comprehensive_evaluation.py  test_config.py  test_connection_management.py  test_context_manager.py  test_database.py  test_decision_agent.py  test_enhanced_task_planning.py  test_execution_logger.py  test_executor.py  test_executor_flow.py  test_executor_integration.py  test_file_operations.py  test_integration.py  test_iterative_code_generation.py  test_migrations.py  test_orchestrator.py  test_progress_e2e.py  test_progress_performance.py  test_progress_tracking.py  (+12 more)
(+171 files in other folders)
